# internal/gateways/rest/routes.go
@@ -16,6 +16,8 @@ func (s *Server) endpoints() {
 	{
 		v1.GET("/activities", s.ListActivities())
 		v1.GET("/activities/:id", s.GetActivity())
+
+		v1.POST("/otp/send", s.SendOTP())
 	}
 
 	admin := v1.Group("/admin", s.adminAuth())
